Try to fix bug on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -49,13 +49,13 @@ section {
     grid-area: 3 / 1 / 4 / 2;
   }
   .div3 {
-    grid-area: 4 / 1 / 6 / 2;
+    grid-area: 4 / 1 / 7 / 6;
   }
   .div4 {
-    grid-area: 6 / 1 / 9 / 2;
+    grid-area: 7 / 1 / 10 / 2;
   }
   .div5 {
-    grid-area: 9 / 1 / 10 / 2;
+    grid-area: 10 / 1 / 11 / 2;
   }
 }
 .section2 {
