--- a/src/components/secrettext/secrettext.css
+++ b/src/components/secrettext/secrettext.css
@@ -7,13 +7,18 @@
   align-items: center;
 }
 
+@media (max-width: 700px) {
+  .box-secret-text {
+    justify-content: flex-start;
+  }
+}
+
 .secret-text {
   position: relative;
   font-size: 5rem;
   text-align: center;
   color: var(--clr-primary);
   z-index: 100;
-  margin-left: 20px;
   font-family: "Trispace", sans-serif;
   letter-spacing: 10px;
 }
@@ -37,6 +42,11 @@
 }
 
 @media (max-width: 800px) {
+  .secret-text {
+    font-size: 1.5rem;
+  }
+}
+@media (max-width: 700px) {
   .secret-text {
     font-size: 1.5rem;
   }
